src/main/java/com/sample/web/rest/errors/RestErrorHandler.java
package com.sample.web.rest.errors;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.ResponseStatus;

@ControllerAdvice
public class RestErrorHandler {

    private static final Logger LOGGER = LoggerFactory.getLogger(RestErrorHandler.class);

    @ExceptionHandler(CategoryNotFoundException.class)
    @ResponseStatus(value = HttpStatus.BAD_REQUEST, reason = "Category not found")
    public void handleTodoNotFoundException(CategoryNotFoundException ex) {
        LOGGER.debug(ex.getMessage());
    }
}


